sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1d/errors.dfrouter
Error: Attribute 'pos' in definition of detectorDefinition 'MQ11Fs2' is not a real number.
Quitting (on error).
